k8s/geo_service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fun-taxi-geo-service
spec:
  selector:
    app: fun-taxi-geo-service
  ports:
    - protocol: TCP
      port: 8078
      targetPort: 80
