k8s/geo_service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fun-taxi-geo-service-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /geo
          pathType: Prefix
          backend:
            service:
              name: fun-taxi-geo-service
              port:
                number: 8078
